--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="mobile-message">
+    <p>Please open in a desktop browser</p>
+  </div>
   <div class="container">
     <div class="sidebar">
       <h2>Colors</h2>
