--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="desktop-message" id="desktopMessage">Please open in a desktop browser.</div>
   <div class="container">
     <div class="sidebar">
       <h2>Colors</h2>
@@ -24,6 +23,9 @@
       <p class="footer">Made with ♡ by Carla M.</p>
     </div>
   </div>
+
+  <!-- Mobile message (hidden by default, displayed on mobile) -->
+  <p class="mobile-message">Please open in a desktop browser.</p>
 
   <script src="script.js"></script>
 </body>
