--- a/index.html
+++ b/index.html
@@ -27,19 +27,16 @@
         .top-bar {
             display: flex;
             justify-content: center;
-            align-items: center;
             gap: 15px;
             padding: 10px;
             background-color: rgba(255, 255, 255, 0.7);
-            width: 100%;
-            box-sizing: border-box;
-            position: sticky; /* Fixes it to the top of the page */
+            position: sticky;
             top: 0;
             z-index: 1;
         }
 
         .top-bar label {
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 300;  /* Light weight for a thin look */
         }
 
@@ -48,7 +45,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 80px; /* Ensure space for top bar */
+            margin-top: 60px;
         }
 
         footer {
@@ -57,41 +54,6 @@
             background-color: transparent;
             font-size: 16px;
             color: black;
-            margin-top: 30px; /* Ensure space between canvas and footer */
-        }
-
-        /* Media Queries for responsiveness */
-        @media (max-width: 768px) {
-            .top-bar {
-                flex-direction: column; /* Stack the controls vertically on mobile */
-                gap: 10px;
-                padding: 15px;
-                margin-top: 10px;
-            }
-
-            .top-bar label {
-                font-size: 12px;
-                text-align: center;
-            }
-
-            footer {
-                font-size: 14px;
-            }
-
-            .canvas-container {
-                margin-top: 120px; /* Increase space for mobile */
-            }
-        }
-
-        @media (max-width: 480px) {
-            .top-bar label {
-                font-size: 10px;
-                text-align: center;
-            }
-
-            footer {
-                font-size: 12px;
-            }
         }
     </style>
 </head>
@@ -158,11 +120,12 @@
 
             function windowResized() {
                 resizeCanvas(windowWidth, windowHeight);
+                background(255, 230, 230);  // Reset background on resize
             }
         </script>
     </div>
 
-    <footer class="footer">
+    <footer>
         <p>Developed by sasas ❤️</p>
     </footer>
 
